Add animations to mhome page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>OneTwoCareer - Home</title>
 	<link rel="stylesheet" href="./style.css">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -39,7 +40,7 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" data-aos="fade-left">
 	<div class="col col-span-6">
 		<div class="balloon_science">
 			<img src="images/balloon_science.svg">
@@ -55,7 +56,7 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" data-aos="fade-right">
 	<div class="col col-span-6">
 		<img class="col-span-6-img" src="images/Dawn.png">
 	</div>
@@ -72,7 +73,7 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" data-aos="fade-left">
 	<div class="col col-span-6">
 		<h1>Образование</h1>
 		<p>Представлено более 5 000 актуальныхпрофессий. Представлены как старые Так и совершенно новые профессии.</p>
@@ -82,7 +83,7 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row" data-aos="fade-right">
 	<div class="col col-span-6">
 		<img class="col-span-6-img" src="images/Pump.png">
 	</div>
@@ -134,17 +135,17 @@
         <div class="other-review-text">
 						<div class="clients-rewiews">
 							<h2>Артем</h2>
-							<h3>43 года</h3>
+							<h3></h3>
 							<p>Для меня главное - результат. OneTwoCareer мне его предоставили. Ребенок доволен и изучает информацию о будущей профессии. Мне тоже было интересно, хоть я уже давно определился с профессией.</p>
 						</div>
 						<div class="clients-rewiews">
 							<h2>Артем</h2>
-							<h3>43 года</h3>
+							<h3></h3>
 							<p>Для меня главное - результат. OneTwoCareer мне его предоставили. Ребенок доволен и изучает информацию о будущей профессии. Мне тоже было интересно, хоть я уже давно определился с профессией.</p>
 						</div>
 						<div class="clients-rewiews">
 							<h2>Артем</h2>
-							<h3>43 года</h3>
+							<h3></h3>
 							<p>Для меня главное - результат. OneTwoCareer мне его предоставили. Ребенок доволен и изучает информацию о будущей профессии. Мне тоже было интересно, хоть я уже давно определился с профессией.</p>
 						</div>
 
@@ -182,5 +183,9 @@
 	</div>
 </footer>
 <script src="./js/script.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
