Add animation to plane and arrow

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>OneTwoCareer - Home</title>
@@ -30,13 +30,15 @@
 		<div class="balloon_main">
 			<img src="images/balloon_one.svg">
 		</div>
+		<div class="active-plane">
+			<img src="images/planewithname.svg">
+		</div>
 	</div>
 </div>
 
 <div class="row">
 	<div class="col col-span-12 col-span-12-arrow">
-		<img src="images/Arrows.svg">
-		Описание
+		<img class="arrow-active" src="images/Arrows.svg">
 	</div>
 </div>
 
