index2 add new price

--- a/index2.html
+++ b/index2.html
@@ -251,8 +251,15 @@
 	<div class="col col-span-12 col-span-12-bottom-main-text">
 		<h1>НАЧНИ МЕНЯТЬ СВОЮ ЖИЗНЬ. <font color="#FF8818">СЕЙЧАС!</font></h1>
 		<h2>Успей купить со скидкой!</h2>
-		<h3>450 рублей!</h3>
-		<h4>Специальное предложение с 1 ноября по 31 декабря 2020 года.</h4>
+		<h3>900 рублей</h3>
+		<h4>450 рублей!</h4>
+		<h5>Специальное предложение с 1 ноября по 31 декабря 2020 года.</h5>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col col-span-12 col-span-12-arrow">
+		<img class="arrow-active" src="images/Arrows.svg">
 	</div>
 </div>
 
